# rtos-embedded-template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: gcc-arm-none-eabi.cmake
ide-settings/vscode/: launch.json  settings.json
lib/STM32F4/Core/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
lib/STM32F4/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_usart.c
lib/STM32H7/Core/: stm32h7xx_hal_conf.h
src/config/KONEXH723/: config.h
src/main/controllers/: core_controller.cpp  core_controller.hpp  dshot_controller.cpp  dshot_controller.hpp  runnable.cpp  runnable.hpp  rx_controller.cpp  rx_controller.hpp
src/main/core/: board_config.hpp  config.cpp  config.hpp  error_handler.cpp  error_handler.hpp  main.cpp  main.h  mcu.hpp
src/main/drivers/: dshot.cpp  dshot.hpp  platform.hpp  rcc.h
src/main/drivers/common/: device.hpp  hardware.cpp  hardware.hpp
src/main/drivers/pal/: dma.cpp  dma.hpp  global_io.cpp  global_io.hpp  gpio.cpp  gpio.hpp  isr.cpp  isr.hpp  pal.cpp  pal.hpp  timer.cpp  timer.hpp  uart.cpp  uart.hpp
src/main/drivers/stm32/: system.hpp
src/main/drivers/stm32/common/: rcc_stm32.c  rcc_stm32.cpp  stm32_dma.cpp  stm32_dma.hpp  stm32_dma_impl.hpp  stm32_global_io.cpp  stm32_gpio.cpp  stm32_gpio.hpp  stm32_pal.cpp  stm32_timer.cpp  stm32_timer.hpp  stm32_timer_impl.hpp  stm32_uart.cpp  stm32_uart.hpp  stm32_uart_impl.hpp
src/main/drivers/stm32/f429/: system_f429.cpp
src/main/drivers/stm32/h723/: dma_stm32h723.cpp  system_h723.cpp  timer_stm32h723.cpp  uart_stm32h723.cpp
src/main/drivers/stm32/pal/: stm32_pal.cpp
src/main/io/: resource.hpp
src/main/memory/: factory.hpp  pool_allocator.hpp  static_allocator.hpp
src/main/rx/: ghst.cpp  ghst.hpp  rx.cpp  rx.hpp
src/main/utilities/: constexpr.cpp  crc.c  crc.cpp  crc.h  crc.hpp  file_stream.cpp  file_stream.h  file_stream.hpp  maths.c  maths.cpp
src/rtos/: FreeRTOSConfig.h  rtos.hpp
